{{$NEXT}}

0.161740  2016-06-22 19:57:20-04:00 America/New_York

    * Added formatted Message Attachments (HT: @spazm)
    * Fixed issues with incorrect URls for repo and issue tracker (HT: @InfinityGone)
    * Fixed encoding issues when sending wide characters to Slack.

0.160490  2016-02-18 10:28:56-06:00 America/Chicago

    * Changed send_message to use Slack REST API rather than Slack RTM because
      the API allows for message formatting, while RTM does not.